# alert-orchestrator

./: .env.test  .gitignore  Dockerfile  README.md  config.py  debug_outlook.py  dependencies.py  exceptions.py  health.py  main.py  pyproject.toml
adapters/: stubs.py
adapters/email/: __init__.py  factory.py  pool.py  sender.py
adapters/http/: __init__.py  alert_db.py  base.py  project_manager.py
adapters/messaging/: rabbitmq.py
api/: debug_routes.py  health.py
models/: models.py
services/: orchestrator.py
templates/: alert.html  index.html
tests/: __init__.py  factories.py  test_api.py  test_components.py  test_email_pool.py  test_errors.py  test_http_base.py  test_orchestrator.py  test_project_manager.py
