[project]
name = "alert-orchestrator"
version = "0.1.0"
description = "AlertMailer microservice for reliable alert delivery"
authors = [
    {name = "AlertOrchestrator Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.0.0",
    "httpx>=0.27.0",
    "aiosmtplib>=3.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
